[Site] Fix off-center link in footer

--- a/site/src/components/Footer.scss
+++ b/site/src/components/Footer.scss
@@ -13,7 +13,7 @@
       justify-content: center;
     }
   }
-  .footer-link {
+  .footer-link.button {
     margin-left: auto;
     margin-right: auto;
   }
